# typeto.me2

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  builder.dockerfile  docker-compose.yml  entrypoint  tui_client.py  tui_readme.md
gui/: app.module.js  gh-icon.module.js  index.html
server/: index.ts
src/: main.rs
