[package]
name = "typeto-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["fs", "cors"] }
hyper = { version = "0.14", features = ["full"] }
hyper-tungstenite = "0.11"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }